<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:scaleType="centerCrop">


        <android.support.design.widget.FloatingActionButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/sflauncher"
            android:id="@+id/floatingActionButton8"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginStart="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="64dp"
            app:layout_constraintTop_toTopOf="@+id/floatingActionButton9"
            app:rippleColor="@android:color/holo_red_dark" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/starfleet_command_emblem"
            android:id="@+id/floatingActionButton9"
            app:backgroundTint="@android:color/holo_blue_light"
            android:layout_marginEnd="64dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="64dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:rippleColor="@android:color/holo_red_dark"
            app:layout_constraintVertical_bias="0.75"
            android:layout_marginBottom="32dp" />

        <Button
            android:text="@string/universal_translator"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/button_rounded"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.31"
            android:layout_width="300dp" />

        <TextView
            android:text="@string/secure_transmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintRight_toRightOf="@+id/floatingActionButton8"
            app:layout_constraintLeft_toLeftOf="@+id/floatingActionButton8"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/secure_direct_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintLeft_toLeftOf="@+id/floatingActionButton9"
            app:layout_constraintRight_toRightOf="@+id/floatingActionButton9"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.36" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/odb"
            android:id="@+id/floatingActionButton"
            app:backgroundTint="?android:attr/textColorHintInverse"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/translations_db"
            android:layout_width="82dp"
            android:layout_height="41dp"
            android:id="@+id/textView12"
            android:textColor="@color/colorBG"
            app:layout_constraintLeft_toLeftOf="@+id/floatingActionButton"
            app:layout_constraintRight_toRightOf="@+id/floatingActionButton"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>