<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/msgbg">

    <TextView
        android:background="@drawable/button_rounded"
        android:padding="10dp"
        android:text="@string/language"
        android:id="@+id/textView6"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBG"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textSize="14sp"
        android:layout_width="251dp"
        android:textAlignment="textStart"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <TextView
        android:padding="10dp"
        android:text="@string/message"
        android:background="@drawable/button_rounded"
        android:layout_width="0dp"
        android:id="@+id/textView7"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBG"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView9" />

    <TextView
        android:padding="10dp"
        android:background="@drawable/button_rounded"
        android:text="@string/translation"
        android:id="@+id/textView8"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBG"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textSize="14sp"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:padding="10dp"
        android:layout_width="0dp"
        android:id="@+id/textView10"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBG"
        android:textSize="18sp"
        android:textColorHighlight="@color/colorBG"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView8" />

    <TextView
        android:padding="10dp"
        android:layout_width="0dp"
        android:id="@+id/textView11"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBG"
        android:textSize="18sp"
        android:textColorHighlight="@color/colorBG"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView7" />

    <TextView
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textColor="@color/colorBG"
        android:textSize="18sp"
        android:textColorHighlight="@color/colorBG"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageView
        android:layout_width="57dp"
        android:layout_height="49dp"
        app:srcCompat="@drawable/launcher"
        android:id="@+id/imageView"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp" />
</android.support.constraint.ConstraintLayout>